test/stg/error/dataType1.stg
-- Duplicate type+data constructors (with Prelude)
data Bool1 = True | False;
data Bool1 = Nil | Con;
